# analysis_pipeline

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: Config.cmake.in
config/: logger.json  pipeline.json  plugins.json
include/analysis_pipeline/config/: config_manager.h
include/analysis_pipeline/pipeline/: pipeline.h  stage_node.h
include/config/: config_manager.h  config_parser.h
include/pipeline/: config_parser.h  pipeline.h  stage_node.h
include/root_util/: root_logger.h
include/stages/: base_stage.h  dummy_stage.h
scripts/: build.sh  run.sh
scripts/submodules/: build_submodules.sh
src/: main.cpp
src/analysis_pipeline/config/: config_manager.cpp  config_parser.cpp
src/analysis_pipeline/pipeline/: pipeline.cpp  stage_node.cpp
src/analysis_pipeline/root_util/: root_logger.cpp
src/config/: config_manager.cpp  config_parser.cpp
src/pipeline/: config_parser.cpp  pipeline.cpp  stage_node.cpp
src/root_util/: root_logger.cpp
src/stages/: base_stage.cpp  dummy_stage.cpp
